[workspace]
members = [
    "crates/syft-cli",
    "crates/syft-core",
    "crates/syft-git",
    "crates/syft-objects",
    "crates/syft-semantic",
    "crates/syft-store",
    "crates/syft-types",
    "crates/syft-validate",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Mohamed Achaq"]
repository = "https://github.com/chaqchase/syft"
homepage = "https://github.com/chaqchase/syft"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
tempfile = "3.23"
toml = "0.9"
ulid = { version = "1.2", features = ["serde"] }
walkdir = "2.5"
