[package]
name = "syft-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-git = { path = "../syft-git" }
syft-objects = { path = "../syft-objects" }
syft-semantic = { path = "../syft-semantic" }
syft-store = { path = "../syft-store" }
syft-types = { path = "../syft-types" }
syft-validate = { path = "../syft-validate" }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
