[package]
name = "syft-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core application services for syft"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-git.workspace = true
syft-objects.workspace = true
syft-semantic.workspace = true
syft-store.workspace = true
syft-types.workspace = true
syft-validate.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
