[package]
name = "syft-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
syft-objects = { path = "../syft-objects" }
syft-store = { path = "../syft-store" }
syft-types = { path = "../syft-types" }
tempfile.workspace = true

