[package]
name = "syft-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Git bridge helpers for syft"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
syft-objects = { version = "0.1.0", path = "../syft-objects" }
syft-store = { version = "0.1.0", path = "../syft-store" }
syft-types = { version = "0.1.0", path = "../syft-types" }
tempfile.workspace = true
