[package]
name = "syft-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Git bridge helpers for syft"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
syft-objects.workspace = true
syft-store.workspace = true
syft-types.workspace = true
tempfile.workspace = true
