[package]
name = "syft-objects"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-store = { path = "../syft-store" }
syft-types = { path = "../syft-types" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
