[package]
name = "syft-objects"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Content-addressed object storage and snapshot trees for syft"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-store.workspace = true
syft-types.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
