[package]
name = "syft-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
syft-objects = { path = "../syft-objects" }
syft-store = { path = "../syft-store" }
syft-types = { path = "../syft-types" }
tempfile.workspace = true
