[package]
name = "syft-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust-first semantic indexing and diffing for syft"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
syft-objects = { version = "0.1.0", path = "../syft-objects" }
syft-store = { version = "0.1.0", path = "../syft-store" }
syft-types = { version = "0.1.0", path = "../syft-types" }
tempfile.workspace = true
