[package]
name = "syft-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust-first semantic indexing and diffing for syft"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
syft-objects.workspace = true
syft-store.workspace = true
syft-types.workspace = true
tempfile.workspace = true
