[package]
name = "syft-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-types = { path = "../syft-types" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
