[package]
name = "syft-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Metadata and object store abstractions for syft"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-types = { version = "0.1.0", path = "../syft-types" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
