[package]
name = "syft-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared domain types for syft"
readme = "../../README.md"

[dependencies]
blake3.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
