[package]
name = "syft-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local validation runner for syft snapshots"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-git = { version = "0.1.0", path = "../syft-git" }
syft-objects = { version = "0.1.0", path = "../syft-objects" }
syft-store = { version = "0.1.0", path = "../syft-store" }
syft-types = { version = "0.1.0", path = "../syft-types" }
tempfile.workspace = true
