[package]
name = "syft-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local validation runner for syft snapshots"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
syft-git.workspace = true
syft-objects.workspace = true
syft-store.workspace = true
syft-types.workspace = true
tempfile.workspace = true
